auto_branch_pushes/kkimdev/server-port-cleanup-2/ppluto-main/overlays/prod_gcp/deployment-misc.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ppluto-main-misc
spec:
  selector:
    matchLabels:
      app: ppluto-main-misc
  replicas: 1
  template:
    metadata:
      labels:
        app: ppluto-main-misc
    spec:
      terminationGracePeriodSeconds: 60 # https://jenakim47.tistory.com/80
      containers:
        - name: ppluto-main--prod-misc
          image: registry.gitlab.com/ppluto-dev/ppluto-main/prod-server:7b18d129beef3f596a5bc13269d5db6ffea82c9e13d30dcd6534ae8652f0815f
          resources:
            # requests:
            #   cpu: 200m
            #   memory: 1Gi
            #   ephemeral-storage: 1Gi
            limits:
              cpu: 500m
              memory: 3Gi
              ephemeral-storage: 9Gi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 60"]

      imagePullSecrets:
        - name: gitlab-container-registry

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ppluto-main-wsrv
spec:
  selector:
    matchLabels:
      app: ppluto-main-wsrv
  replicas: 3
  template:
    metadata:
      labels:
        app: ppluto-main-wsrv
    spec:
      terminationGracePeriodSeconds: 60 # https://jenakim47.tistory.com/80
      containers:
        - name: ppluto-main--prod-misc
          image: registry.gitlab.com/ppluto-dev/ppluto-main/prod-server:7b18d129beef3f596a5bc13269d5db6ffea82c9e13d30dcd6534ae8652f0815f
          ports:
            - containerPort: 5088
          readinessProbe:
            httpGet:
              path: /wsrvProxy/?url=https://upload.wikimedia.org/wikipedia/en/8/80/Wikipedia-logo-v2.svg
              port: 5088
            # TODO: The pod is frequently reported as not responding for an unknown reason.
            #       Maybe it's a false warning so disable livenessProbe to test that.
            # livenessProbe:
            #   httpGet:
            #     path: /wsrvProxy/?url=https://upload.wikimedia.org/wikipedia/en/8/80/Wikipedia-logo-v2.svg
            #     port: 5088
          resources:
            # requests:
            #   cpu: 50m
            #   memory: 1Gi
            #   ephemeral-storage: 3Gi
            limits:
              cpu: 500m
              memory: 3Gi
              ephemeral-storage: 5Gi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 60"]

      imagePullSecrets:
        - name: gitlab-container-registry
