auto_branch_pushes/kkimdev/server-port-cleanup-2/ppluto-main/overlays/prod_gcp/deployment.yaml
kind: Rollout
apiVersion: argoproj.io/v1alpha1
metadata:
  name: ppluto-main
spec:
  selector:
    matchLabels:
      app: ppluto-main
  replicas: 5
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: ppluto-main
    spec:
      terminationGracePeriodSeconds: 1800 # https://jenakim47.tistory.com/80
      containers:
        - name: ppluto-main--prod-client
          image: registry.gitlab.com/ppluto-dev/ppluto-main/prod-client:17e300b683cd1d33140a7af83ff8b624093096c08290ad46368124e0a3275c3d
          ports:
            - containerPort: 5280
            - containerPort: 5380
            - containerPort: 5480
          resources:
            # requests:
            #   cpu: 100m
            #   memory: 10Mi
            limits:
              cpu: 200m
              memory: 100Mi
              ephemeral-storage: 1Gi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 1800"]
        - name: ppluto-main--prod-client-tickerbell
          image: registry.gitlab.com/ppluto-dev/ppluto-main/prod-client-tickerbell:8c8cf2ebb334a66c42717eea1a029ecf8eae69925faba4e62af79beb8b44fc29
          ports:
            - containerPort: 5080
            - containerPort: 5095
          readinessProbe:
            httpGet:
              port: 5080
              path: /
          livenessProbe:
            httpGet:
              port: 5080
              path: /
          resources:
            # requests:
            #   cpu: 200m
            #   memory: 500Mi
            limits:
              cpu: 500m
              memory: 3Gi
              ephemeral-storage: 1Gi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 1800"]
        - name: ppluto-main--prod-server
          image: registry.gitlab.com/ppluto-dev/ppluto-main/prod-server:ad06901b2c0132e869ac280413b871a5abc89cc7a503f99153d6a167e1498fb4
          ports:
            - containerPort: 5081
            - containerPort: 5082
            - containerPort: 5086
            - containerPort: 5089
          readinessProbe:
            # TODO: Implement gRPC health check instead. https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle/#probe-check-methods
            tcpSocket:
              port: 5082
          # TODO: Enable `livenessProbe`.  Temporarily disabled to debug container crash issue.
          # livenessProbe:
          #   tcpSocket:
          #     port: 5082
          resources:
            # requests:
            #   cpu: 500m
            #   memory: 1Gi
            #   ephemeral-storage: 3Gi
            limits:
              cpu: 1000m
              memory: 3Gi
              ephemeral-storage: 5Gi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 1800"]
      imagePullSecrets:
        - name: gitlab-container-registry
  strategy:
    blueGreen:
      activeService: ppluto-main-service-active
      previewService: ppluto-main-service-preview
      autoPromotionEnabled: true
